--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>Trivia</title>
     <link href="style1.css" rel="stylesheet" type="text/css" />
     <script src="script.js"></script>
+
+    <link rel="apple-touch-icon" sizes="180x180" href="\TriviaOnline\img\favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="\TriviaOnline\img\favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="\TriviaOnline\img\favicon/favicon-16x16.png">
+    <link rel="manifest" href="\TriviaOnline\img\favicon/site.webmanifest">
+    <link rel="mask-icon" href="\TriviaOnline\img\favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="\TriviaOnline\img\favicon/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="\TriviaOnline\img\favicon/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
+
 </head>
 <center>
 
